# printforge

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: users.json
docs/: commercial-plan.md  company-ops.md  competitive-analysis.md  cross-domain-opportunities.md  growth-strategy.md  hn-post-final.md  iphone-scan-concept.md  launch-checklist.md  launch-copy.md  launch-metrics.md  launch-timing.md  openapi.json  reddit-post-final.md  risk-register.md  sprint-plan.md  tech-roadmap-next.md  tutorial-article.md  unit-economics.md
examples/: cylinder_30mm.stl
reports/: test_integration_report.md
scripts/: deploy.sh  generate_demo_images.py  generate_examples.py  install.sh  launch_monitor.py  security_audit.sh  test_web_e2e.sh
src/printforge/: GENESIS_LESSON.md  __init__.py  analytics.py  api_v2.py  auto_crop.py  background_removal.py  bambu.py  batch.py  benchmark.py  billing.py  cache.py  cli.py  community.py  competitor_monitor.py  converter.py  cost_estimator.py  depth_estimator.py  errors.py  export_glb.py  failure_predictor.py  feishu_notifier.py  formats.py  health.py  i18n.py  legal.py  material_db.py  material_recommender.py  mesh_analysis.py  metrics.py  middleware.py  model_store.py  multi_angle_scan.py  multi_engine.py  multi_view.py  part_splitter.py  pipeline.py  pipeline_patch.py  print_farm.py  print_optimizer.py  printer_profiles.py  (+21 more)
src/printforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_samples/: anime_prompts.txt
tests/: conftest.py  test_api_v2.py  test_async_queue.py  test_auto_crop.py  test_background_removal.py  test_benchmark_legal_download.py  test_cache_and_fallback.py  test_cost_and_orientation.py  test_depth_estimator.py  test_integration.py  test_material_recommender.py  test_multi_angle_scan.py  test_multi_engine.py  test_new_features.py  test_optimizer.py  test_pipeline.py  test_polish_sprint.py  test_quality_upgrade.py  test_slicer_preview.py  test_sprint5.py  test_tail_remover.py  test_texture.py  test_trellis.py  test_v1_5_modules.py  test_v22_features.py
web/: api-keys.html  dashboard.html  index.html  preview.html
