[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printforge"
version = "1.1.0"
description = "One photo to 3D print. Open-source, local, print-optimized."
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "torchvision",
    "trimesh>=4.0",
    "numpy",
    "scipy",
    "shapely",
    "mapbox-earcut",
    "Pillow",
    "requests",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
bg = ["rembg"]
ws = ["websockets"]

[project.scripts]
printforge = "printforge.cli:main"

[tool.setuptools.package-data]
printforge = ["../../web/**/*"]

[tool.setuptools.data-files]
"share/printforge/web" = ["web/index.html"]
